src/Navigation.css
a {
    text-decoration: none;
    color: inherit;
}

.sticky-navigation {
    /* Position */
    position: fixed;
    top: 0;
    left: 0;

    /* Box Model */
    padding: 1rem;
    min-width: 100vw;

    /* Layout */
    display: flex;
    justify-content: space-between;
    align-items: center;

    /* other */
    background: #E6E6E6;
}

.site-logo {
    outline: 4px solid #252525;
    border-radius: 5px;
    padding: 0.1rem 0.4rem;

    /* Font */
    font-size: 1.8rem;
    font-weight: bolder;
}

.site-logo:hover {
    transform: scale(1.1);
    transition-duration: 0.3s;
}

.navigation-list {
    /* Layout */
    display: flex;
    justify-content: space-around;
    gap: 2rem
}

.navigation-item {
    list-style: none;
}

.navigation-item:hover {
    font-weight: bold;
}

/* CLASS "active" is automatically assigned by React Router when that link is clicked */
.active {
    font-weight: bold;
    text-decoration: underline;
}

@media (max-width: 360px) {
    .navigation-item {
        font-size: 1rem;
    }
}

@media (min-width: 976px) {
    .navigation-item {
        font-size: 2rem;
    }
}

